--- a/src/styles/loading.module.css
+++ b/src/styles/loading.module.css
@@ -1,4 +1,4 @@
-.loading-shading-mui {
+.shading {
   position: absolute;
   top: 0;
   left: 0;
@@ -8,7 +8,7 @@
   background: rgba(255, 255, 255, .3);
 }
 
-.loading-icon-mui {
+.icon{
   position: absolute;
   font-size: 20px;
   top: calc(45% - 10px);
